@@ -5,8 +5,9 @@
 
 static const wchar_t empty_wstr[] = {0};
 
-CFarMenu::CFarMenu(LPCWSTR szHelp/*={}*/, const GUID* MenuId/*= {}*/, unsigned nMaxItems/*=40*/)
+CFarMenu::CFarMenu(COORD MousePositionFromFar, LPCWSTR szHelp/*={}*/, const GUID* MenuId/*= {}*/, unsigned nMaxItems/*=40*/)
   : m_szHelp(szHelp)
+  , m_MousePositionFromFar(MousePositionFromFar)
   , m_nItemCnt(0)
   , m_szArrow(L"  \x25BA")
   , m_bArrowsAdded(false)
@@ -145,56 +146,56 @@ void CFarMenu::SetSelectedItem(unsigned nIndex)
   }
 }
 
-void CFarMenu::GetCursorXY(int* pnX, int* pnY)
+static bool GetCursorXY(int* pnX, int* pnY)
 {
-  POINT pt={0};
-  if (!GetCursorPos(&pt))
-  {
-    assert(0);
-  }
-  else
-  {
-    HWND hFarWnd=(HWND)thePlug->AdvControl(&MainGuid, ACTL_GETFARHWND, 0, {});
-    if (!ScreenToClient(hFarWnd, &pt))
-    {
-      assert(0);
-    }
-    else
-    {
-      RECT rc;
-      if (!GetClientRect(hFarWnd, &rc))
-        assert(0);
-      else {
-        bool success=false;
-        COORD console_size;
-        SMALL_RECT console_rect;
-        if (thePlug->AdvControl(&MainGuid, ACTL_GETFARRECT, 0, &console_rect))
-        {
-          success=true;
-          console_size.X=console_rect.Right-console_rect.Left+1;
-          console_size.Y=console_rect.Bottom-console_rect.Top+1;
-        }
-        if (!success)
-        {
-          assert(0);
-        }
-        else
-        {
-          if (pt.x>=rc.left && pt.x<=rc.right && pt.y>=rc.top && pt.y<=rc.bottom)
-          {
-            *pnX=int(console_size.X*pt.x/(rc.right-rc.left));
-            *pnY=int(console_size.Y*pt.y/(rc.bottom-rc.top));
-          }
-        }
-      }
-    }
-  }
+	POINT pt={0};
+	if (!GetCursorPos(&pt))
+		return false;
+
+	const auto hFarWnd = reinterpret_cast<HWND>(thePlug->AdvControl(&MainGuid, ACTL_GETFARHWND, 0, {}));
+	if (!ScreenToClient(hFarWnd, &pt))
+		return false;
+
+	RECT rc;
+	if (!GetClientRect(hFarWnd, &rc))
+		return false;
+
+	if (rc.left >= rc.right || rc.top >= rc.bottom)
+		return false;
+
+	SMALL_RECT console_rect;
+	if (!thePlug->AdvControl(&MainGuid, ACTL_GETFARRECT, 0, &console_rect))
+		return false;
+
+	COORD const console_size
+	{
+		console_rect.Right - console_rect.Left + 1,
+		console_rect.Bottom - console_rect.Top + 1,
+	};
+
+	if (pt.x < rc.left || pt.x > rc.right || pt.y < rc.top && pt.y > rc.bottom)
+		return false;
+
+	*pnX = static_cast<int>(console_size.X * pt.x / (rc.right - rc.left));
+	*pnY = static_cast<int>(console_size.Y * pt.y / (rc.bottom - rc.top));
+
+	return true;
 }
 
 int CFarMenu::Show(LPCWSTR szTitle, int nSelItem/*=0*/, bool bAtCursorPos/*=false*/)
 {
   int nX=-1, nY=-1;
-  if (bAtCursorPos) GetCursorXY(&nX, &nY);
+  if (bAtCursorPos)
+  {
+    if (!GetCursorXY(&nX, &nY))
+    {
+      if (m_MousePositionFromFar.X && m_MousePositionFromFar.Y)
+      {
+        nX = m_MousePositionFromFar.X;
+        nY = m_MousePositionFromFar.Y;
+      }
+    }
+  }
   AddArrows();
   FarKey pBreakKeys[]={{VK_RIGHT,0},
                        {VK_LEFT,0},
