@@ -7,14 +7,13 @@
 class CFarMenu
 {
 public:
-  CFarMenu(LPCWSTR szHelp={}, const GUID* MenuId = nullptr, unsigned nMaxItems=40);
+  CFarMenu(COORD MousePositionFromFar = {}, LPCWSTR szHelp={}, const GUID* MenuId = nullptr, unsigned nMaxItems=40);
   ~CFarMenu();
   enum ECheck {CHECKED, UNCHECKED, RADIO};
   unsigned AddItem(LPCWSTR szText, bool bHasSubMenu=false, ECheck enChecked=UNCHECKED, bool bDisabled=false);
   unsigned InsertItem(unsigned nIndex, LPCWSTR szText, bool bHasSubMenu=false, ECheck enChecked=UNCHECKED, bool bDisabled=false);
   void AddSeparator();
   int Show(LPCWSTR szTitle, int nSelItem=0, bool bAtCursorPos=false);
-  void GetCursorXY(int* pnX, int* pnY);
   enum {SHOW_CANCEL=-1, SHOW_BACK=-2};
   LPCWSTR operator[](unsigned nIndex);
 protected:
@@ -23,6 +22,7 @@ protected:
   unsigned MenuItemLen(LPCWSTR szText);
 protected:
   LPCWSTR m_szHelp;
+  COORD m_MousePositionFromFar{};
   FarMenuItem* m_pfmi{};
   unsigned m_nItemCnt;
   LPCWSTR m_szArrow;
