@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 03.06.2021 23:29:55 +0100 - build 5812
+
+1. Workarounds for EMenu positioning in Windows Terminal.
+
+--------------------------------------------------------------------------------
 drkns 02.06.2021 18:45:47 +0100 - build 5811
 
 1. Sanitise C1 control characters in output.
